# glitch

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  demo_save.ron  demo_save_1.ron  demo_save_2.ron  launch_pipelines.sh  launch_test_pipelines.sh  runcc.yml
.github/workflows/: ci.yml  rust.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  world_ext.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  comps.rs  lib.rs  ser.rs
crates/data/: Cargo.toml
crates/data/src/: comm.rs  components.rs  lib.rs  ser.rs
crates/draw/: Cargo.toml
crates/draw/src/: draw.rs  layout.rs  lib.rs  pan_zoom_area.rs  style.rs  zoom.rs
crates/graph-layout/: Cargo.toml
crates/graph-layout/src/: engine.rs  lib.rs  sizes.rs
crates/graph-layout/src/layered/: layers.rs  mod.rs  positions.rs
crates/graph_layout/: Cargo.toml
crates/graph_layout/src/: geometry.rs  lib.rs
crates/graph_layout/src/layered/: crossings.rs
crates/render/: Cargo.toml
crates/render/src/: floating_area.rs  layout.rs  lib.rs  pan_zoom_area.rs  render.rs  zoom.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: exts.rs  lib.rs  tracer.rs
crates/ui/: Cargo.toml
crates/ui/src/: layout.rs  lib.rs  style.rs  ui.rs  zoom.rs
