[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Simon Guillot <simon@eigenscape.com>"]
description = "A gstreamer pipeline viewer and debugger"
repository = "https://github.com/eigenscape/glitch"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }
epaint = "0.28"
glib = "0"
gst = { package = 'gstreamer', version = "0" }
gst-app = { package = "gstreamer-app", version = "0" }
gst-audio = { package = "gstreamer-audio", version = "0" }
gst-base = { package = 'gstreamer-base', version = "0" }
gst-sys = { package = "gstreamer-sys", version = "0" }
gst-utils = { package = "gstreamer-utils", version = "0" }
gst-video = { package = "gstreamer-video", version = "0" }
log = "0.4"
remoc = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
