[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Simon Guillot <simon@eigenscape.com>"]
description = "A gstreamer pipeline viewer and debugger"
repository = "https://github.com/simgt/glitch"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
derive_more = { version = "1", features = ["full"] }
eframe = "0.32"
egui = { version = "0.32", features = ["serde"] }
egui_extras = { version = "0.32", features = ["image"] }
enum_dispatch = "0.3"
epaint = "0.32"
glib = "0"
gst = { package = 'gstreamer', version = "0" }
gst-app = { package = "gstreamer-app", version = "0" }
gst-audio = { package = "gstreamer-audio", version = "0" }
gst-base = { package = 'gstreamer-base', version = "0" }
gst-sys = { package = "gstreamer-sys", version = "0" }
gst-utils = { package = "gstreamer-utils", version = "0" }
gst-video = { package = "gstreamer-video", version = "0" }
hecs = { version = "0.10", features = ["macros", "serde", "row-serialize"] }
log = "0.4"
petgraph = "0.6"
remoc = "0.14"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
] }
