[package]
name = "glitch-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
eframe.workspace = true
egui.workspace = true
glib.workspace = true
glitch-data = { path = "../data" }
glitch-draw = { path = "../draw" }
hecs.workspace = true
hot-lib-reloader = { version = "^0.7", optional = true }
log.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
reload = ["dep:hot-lib-reloader"]
