[package]
name = "glitch-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[features]
reload = ["dep:hot-lib-reloader"]

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
eframe.workspace = true
egui.workspace = true
glib.workspace = true
glitch-common = { path = "../common" }
glitch-ui = { path = "../ui" }
hecs.workspace = true
hot-lib-reloader = { version = "^0.7", optional = true }
log.workspace = true
remoc.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
test-log.workspace = true
