[package]
name = "pipewerk-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
publish = false

[features]
reload = ["dep:hot-lib-reloader"]

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
eframe.workspace = true
egui.workspace = true
glib.workspace = true
pipewerk-common = { path = "../common" }
pipewerk-ui = { path = "../ui" }
hecs.workspace = true
hot-lib-reloader = { version = "^0.7", optional = true }
log.workspace = true
remoc.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
test-log.workspace = true
