[package]
name = "pipewerk-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[features]
gstreamer = ["gst", "gst-sys", "glib"]

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
egui.workspace = true
enum_dispatch.workspace = true
glib = { workspace = true, optional = true }
graph-layout = { path = "../graph-layout" }
gst = { workspace = true, optional = true }
gst-sys = { workspace = true, optional = true }
hecs.workspace = true
petgraph.workspace = true
remoc.workspace = true
ron.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
test-log.workspace = true
tempfile = "3.0"
