[package]
name = "glitch-data"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[features]
gstreamer = ["gst", "gst-sys", "glib"]

[dependencies]
derive_more.workspace = true
egui.workspace = true
glib = { workspace = true, optional = true }
gst = { workspace = true, optional = true }
gst-sys = { workspace = true, optional = true }
hecs.workspace = true
petgraph.workspace = true
remoc.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
