[package]
name = "glitch-draw"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
epaint.workspace = true
glib.workspace = true
glitch-data = { path = "../data" }
gst-app.workspace = true
gst-audio.workspace = true
gst-base.workspace = true
gst-sys.workspace = true
gst-utils.workspace = true
gst-video.workspace = true
gst.workspace = true
hecs.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
log.workspace = true
petgraph.workspace = true
remoc.workspace = true
tempfile = "3.8"
tracing.workspace = true
ron = "0.8"
serde = { workspace = true, features = ["derive"] }

[lib]
# We should add dylib here to allow for hot reloading, but we get a compiler
# issue when building crates that depend on this one
crate-type = ["rlib", "cdylib"]
